--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
+  margin-right: 20px;
 }
 
 .task-form {
@@ -27,7 +28,6 @@ body {
 .filter {
   flex-grow: 0;
 }
-
 
 h1 {
   color: #e5ebf4;
@@ -109,12 +109,12 @@ li {
 }
 
 li:hover {
-  background-color: #f5f5f5;
+  background-color: #c3b3b3;
 }
 
 .completed {
   text-decoration: line-through;
-  background-color: #e30817f0;
+  background-color: #b6f90e;
 }
 
 .task-header {
