--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,10 @@ h1 {
 }
 
 .filter {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
   margin-top: 20px;
 }
 
@@ -44,10 +48,10 @@ h1 {
   font-weight: bold;
   font-size: 14px;
   color: #555;
+  margin-right: 10px;
 }
 
 .filter select {
-  margin-left: 10px;
   padding: 8px 12px;
   background-color: #fff;
   border: 1px solid #ddd;
